# project-euler

./: .gitignore  README.md  pyproject.toml  toolkit.nu
.github/workflows/: ci.yaml
project_euler/: test_pe207.py  test_pe700.py  test_pe751_concatenation_coincidence.py  test_pe800.py  test_pe808_reversible_prime_squares.py  test_pe816.py  test_pe816_shortest_distance_among_points.py  test_pe88_product_sum_numbers.py  test_pe932_2025.py
