[project]
name = "project-euler"
version = "3.1.4"
description = "https://projecteuler.net"
dependencies = []
requires-python = "==3.12.*"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.1",
    "pytest-timeout>=2.3.1",
    "numpy>=2.1.3",
]

[tool.pdm.scripts]
test = "pytest --timeout 20 --durations=5"
